<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/lbl_title_34dp"
            android:textAppearance="@style/App.Theme.Text.Title.DP" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/lbl_title_34sdp"
            android:textAppearance="@style/App.Theme.Text.Title.SDP" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/lbl_title_34sp"
            android:textAppearance="@style/App.Theme.Text.Title.SP" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/lbl_title_34ssp"
            android:textAppearance="@style/App.Theme.Text.Title.SSP" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
